# nocturne_bloom

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
NVDA_stock_predictor/: pyproject.toml
NVDA_stock_predictor/app/: __init__.py
NVDA_stock_predictor/configs/: backtest.yaml  config.yaml  data_loader.yaml  data_module.yaml  data_processor.yaml  feature_engineering.yaml  model_CNNLSTM.yaml  model_Ensemble.yaml  train.yaml  trainer.yaml
NVDA_stock_predictor/scripts/: __init__.py  logging_config.py
NVDA_stock_predictor/src/: WRDS_query.sql  __init__.py  backtest.py  config.py  data_loader.py  data_module.py  data_processor.py  feature_engineering.py  hyperparameter_tuning.py  model_CNNLSTM.py  model_Ensemble.py  trainer.py
app/: app.py
app/assets/css/: custom.css
app/layout/: __init__.py  sidebar.py
app/pages/: __init__.py  backtesting.py  data_preparation.py  home.py  training.py
configs/: backtest.yaml  config.yaml  dash.yaml  data_loader.yaml  data_module.yaml  feature_engineering.yaml  model_Ensemble.yaml  model_ensemble.yaml  trainer.yaml
scripts/: feature_correlation.py  feature_importance.py  logging_config.py  run_backtest.py  train_model.py  tune_model.py
src/: WRDS_query.sql  __init__.py  data_loader.py  data_module.py  feature_engineering.py  model_Ensemble.py  model_ensemble.py
