[project]
name = "NVDA_stock_prediction"
version = "1.0.0"
description = "Predicting NVIDIA (NVDA) stock prices using machine learning techniques."
authors = [{ name = "Rayan Joshi", email = "rayanjoshi@hotmail.co.uk" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    # -------- Core ML and Deep Learning -------- #
    "lightning",
    "pytorch-lightning",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchmetrics<=1.3.2",
    "scikit-learn",
    "pandas",
    "numpy==1.26.4",
    "shap",
    "captum",
    # -------- Data Handling & Visualization -------- #
    "matplotlib",
    "seaborn",
    "plotly",
    # -------- Logging -------- #
    "wandb",
    # -------- Financial Data -------- #
    "wrds",
    "yfinance",
    "pandas_datareader",
    # -------- Backtesting & Technical Analysis -------- #
    "backtrader",
    "ta",
    "quantstats",
    "IPython",
    # -------- Dashboard -------- #
    "dash",
    "dash-bootstrap-components",
    "dash[diskcache]",
    # -------- Hyperparameter Optimization -------- #
    "ray[tune]==2.48.0",
    "optuna",
    # -------- Utilities -------- #
    "hydra-core",
    "omegaconf",
    "joblib",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<8.3",
    "black>=24.4.2,<25.0",
    "ruff>=0.4.5,<0.5"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools<81.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]
